<!DOCTYPE resources [<!ENTITY appname "Retroactive Recorder"><!ENTITY author "Hudson Hughes">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="title_activity_main">&appname;</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="instruction_off">&appname; is currently off.\nActivate it in the settings.</string>
    <string name="instruction_on">You can deactivate Retroactive Recorder in the settings.</string>
    <string name="state_of_recorder">The past %1$s of recording can be saved for later playback. Up to %2$s will placed in the buffer. The limit can be changed in the settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_buffer">The audio buffer is currently empty.</string>
    <string name="how_much">How much of the past do you want to save?</string>
    <string name="cant_save_no_space">There is not enough space to store a file this large.</string>
    <string name="failed_to_save">Failed to save file.</string>
    <string name="recording_now">Recording</string>
    <string name="toggle_on">This app owns the microphone.</string>
    <string name="toggle_off">Make sure no other app like OK Google are using the microphone.</string>
    <string name="resize_failed">Resize failed</string>
    <string name="error_space">There is not enough space for the buffer to occupy.</string>
    <string name="switchLabel">Activate &appname;</string>
    <string name="minutes_desired_label">Max audio buffer duration</string>
    <string name="minutes_desired_summary">How many minutes of the past can be stored?</string>
    <string name="you_sure_alter">Alter the buffer size?</string>
    <string name="shrink_waring">If you are shrinking the buffer, This will cause older audio to be deleted.</string>
    <string name="you_sure_erase">Clear the buffer?</string>
    <string name="erase_waring">All audio data in the buffer that hasnt been saved to a wav file will be deleted.</string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
